force-app/main/default/objects/Quiz_Result__c/Quiz_Result__c.object-meta.xml
<CustomObject>
    <label>Quiz Result</label>
    <nameField>
        <displayFormat>QR - {0000}</displayFormat>
        <label>Quiz Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>