force-app/main/default/objects/Quiz_Result__c/fields/Exam_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date_Time__c</fullName>
    <label>Exam Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>