force-app/main/default/objects/Quiz_Result__c/fields/Exam_Name__c.field-meta.xml
<CustomField>
    <fullName>Exam_Name__c</fullName>
    <label>Exam Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>