force-app/main/default/objects/Quiz_Result__c/fields/Exam_Status__c.field-meta.xml
<CustomField>
    <fullName>Exam_Status__c</fullName>
    <label>Exam Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>