force-app/main/default/objects/Quiz_Result__c/fields/Exam_Taken_Time__c.field-meta.xml
<CustomField>
    <fullName>Exam_Taken_Time__c</fullName>
    <label>Exam Taken Time</label>
    <length>12</length>
    <type>Text</type>
</CustomField>