force-app/main/default/objects/Quiz_Result__c/fields/Set_No__c.field-meta.xml
<CustomField>
    <fullName>Set_No__c</fullName>
    <label>Set No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>