force-app/main/default/objects/Quiz_Result__c/fields/Student_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Student_Attempts__c</fullName>
    <label>Student Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>