force-app/main/default/objects/Quiz_Result__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quiz_Results</relationshipName>
    <type>Lookup</type>
</CustomField>