force-app/main/default/objects/Quiz_Result__c/fields/Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>Total_Questions__c</fullName>
    <label>Total Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>