force-app/main/default/objects/Quiz_Result__c/fields/Total_Time_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Duration__c</fullName>
    <label>Total Time Duration</label>
    <length>12</length>
    <type>Text</type>
</CustomField>