force-app/main/default/objects/Quiz_Result__c/fields/UAR_UUID__c.field-meta.xml
<CustomField>
    <fullName>UAR_UUID__c</fullName>
    <label>UAR-UUID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>